# CamAL

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
Configs/: config_ideal_data.yaml  config_refit_data copy.yaml  config_ukdale_data.yaml
Data/REFIT/: README.md
Expes/: IDEAL.py  REFIT.py  UKDALE.py
ExpesHelpers/: utils.py
Helpers/: class_activation_map.py  data_processing.py  other.py  torch_dataset.py  torch_trainer.py  utils.py
Models/CamAL/: CamAL  CamAL.py
Models/Classifiers/: CamALResNet.py
Models/Sota/: BERT4NILM.py  BiLSTM_Kelly.py  CNN1D_NILM.py  DiffNILM.py
configs/: config_expes.yaml  config_refit_data.yaml
data/ideal/: README.md
data/ukdale/: README.md
scripts/: ideal.py  refit.py  ukdale.py
src/helpers/: data_processing.py  expes_helpers.py  other.py  torch_dataset.py  torch_trainer.py  utils.py
src/models/camal/: core.py
src/models/camal/classifiers/: camal_resnet.py  inception_time.py
src/models/nilm_models/: bert4nilm.py  bigru.py  bilstm.py  crnn.py  dresnets.py  fcn.py  fcn_seqtoseq.py  tpnilm.py  transnilm.py  unet_nilm.py
