[project]
name = "camal"
version = "0.1.0"
description = "CamAL: A Weakly Supervised Framework for Appliance Localization in Smart-Meter Series"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "einx>=0.3.0",
    "hydra-core>=1.3.2",
    "imbalanced-learn>=0.13.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pytorch-lightning>=2.4.0",
    "scikit-learn>=1.5.2",
    "simple-parsing>=0.1.6",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.1",
]
